Add Category unit tests